# pipe-calc

./: .gitignore  CLAUDE.md  README.md  main.py  pipe-calc-design.md  pyproject.toml
database/: ASME_B36.10.xlsx  ASME_B36.19.xlsx  db.py  models.py  seed_allowable.py  seed_pipe.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: InputForm.jsx  ResultTable.jsx  UploadModal.jsx
frontend/src/pages/: Calculator.jsx  DataManager.jsx
routers/: allowable_stress.py  calculation.py  pipe_table.py
schemas/: allowable_stress.py  pipe_table.py
